# flytrap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  MODULES  README.md  autocommit.sh  compile_commands.json  mkbuild.sh
lib/: CMakeLists.txt
lib/src/: TODO  config.h  hell.c  tags
lib/src/adt/condition_tree/: condition_tree.h
lib/src/adt/string_tree/: string_tree.c  string_tree.h
lib/src/adt/tree/: tree.hpp
lib/src/adt/trie/: stack.c  stack.h  trie.c  trie.cpp  trie.h
lib/src/adt/vector/: vector.c  vector.h
lib/src/csv_logger/: csv_logger.h
lib/src/edb/: common.hpp  database.hpp  edb.hpp  query.hpp  result.hpp  test.cpp
lib/src/rest/: defs.hpp  eventBase.cpp  eventBase.hpp  event_base.c  event_base.h  main.c  register_modules.c  register_modules.h  request.hpp  response.hpp  rest.c  rest.h  server.cpp  server.hpp  server_ctx.h  test  test.cpp
lib/src/transpose/: reader.cpp  reader.hpp  test.cpp  transpose.hpp  writer.cpp  writer.hpp
lib/src/tree/: tree.cpp  tree.hpp
lib/src/trie/: trie.hpp
lib/src/utils/: common.c  common.h  logger.c  logger.h  macros.h  require.hpp  splitIterator.cpp  splitIterator.hpp
lib/src/wrappers/libevent/: buffer.cpp  buffer.hpp  eventBase.cpp  eventBase.hpp  http.cpp  http.hpp  libevent.hpp  main.cpp  request.cpp  request.hpp
lib/test/: Makefile  ctest.c  ctest.h  ctestUtils.hpp  template_test.cpp  testDatabase.cpp  testQuery.cpp  testTranspose.cpp  testTransposeReader.cpp  testTransposeWriter.cpp  test_hell.c  test_rest.c  test_rest_iface.c  test_stack.c  test_string_tree.c  test_trie.c
src/: edb.cpp  (+1 more)
(+14 files in other folders)
